Update article week-notes/2021/07

--- a/content/week-notes/2021/07.md
+++ b/content/week-notes/2021/07.md
@@ -6,28 +6,27 @@ draft: true
 ---
 - Started the week off pretty well with a lie in (as I'd forgotten to re-enable my Ring Fit morning alarms), and took our leftover Ohanne's chips and chicken and made a pretty good [loaded fries](https://media.jvt.me/4ca2b6fdc7.jpeg)
 - Couldn't use Twitter for a bit on Wednesday, as the app kept crashing after muting someone who was being promoted from a topic
-- had a dream about Lombok
-- McD
+- Another week of being able to remember dreams - boring ones like Lombok and code review, to a bit darker
 - Went to Lidl (twice in the same morning) to get bits for the week, which has meant this week has been drowning in Morph's meowing begging for chicken
-- doughnotts
-- Thu morning positive ceremonies - gaming / chat?
-- Morph has managed to hurt my nose with his aggressive kitty kisses
+- [Got some Doughnotts to start the three day weekend](/mf2/2021/02/wnt5s/)
+- Had a pretty positive Thursday morning - possibly a mix of a chat with Shama / getting my dailies in before work
+- Morph has managed to hurt my nose with his aggressive kitty kisses, although it seems to be a bit better since Thursday
 - Getting hounded by my team on Friday for logging on while I was on holiday (albeit to check calendar to book windows folks coming round) was nice, and pretty proud of myself to have not checked anything
 - Enjoyed being able to edit my week notes through the week "live", rather than updating Google Keep and then writing them later in the week - still wondering if there's something better I can do for convenience to easily open my latest post to edit
 - Done some budgeting for the year, and realised that, although I'm still really quite well off, it's not by the margin I had last year - who knew that buying a big house would result in less savings??
 - Got committer access to Cucumber, which was surprising but awesome!
 - Only one Ring Fit this week, but hoping next week will be better
-- Morph has been trying our patience as ever, while being as cute as is possible to make it less annoying. Also been pushing our 2 seater sofa to its limits 😂
-- A stressful Asda shop, with no pizza to show for it
+- Morph has been trying our patience as ever, while being as cute as is possible to make it less annoying. Also been pushing our 2 seater sofa to its limits, by trying to take a whole seat of space for himself 😂
+- A stressful Asda shop, with no pizza to show for it, but stocked up on bits for the week
 - Got the first Easter egg + Lindt bunny of the season
-- Three nights of bad sleeping habits
+- Three nights of bad sleeping habits, but I've been having lie-ins to slightly counter it
 - Spent all of my crafting materials in _Apex Legends_ while they went a bit further for the anniversary, so I've now got some cooler cosmetics
-- Good, engaging, Thu morning after dailies/Shama
 
 Watched:
 
 - _WandaVision_
 - _Superstore_
 - _South Park_
-- Bits of _The Crown_
+- _Rick and Morty_
+- _The Crown_, in the background while playing Mario
 - _Bridesmaids_ with the gang
