MP: Update article week-notes/2021/07

--- a/content/week-notes/2021/07.md
+++ b/content/week-notes/2021/07.md
@@ -21,6 +21,8 @@ draft: true
 - A stressful Asda shop, with no pizza to show for it
 - Got the first Easter egg + Lindt bunny of the season
 - Three nights of bad sleeping habits
+- Spent all of my crafting materials in _Apex Legends_ while they went a bit further for the anniversary, so I've now got some cooler cosmetics
+- Good, engaging, Thu morning after dailies/Shama
 
 Watched:
 
