Blog about move to Heroku

--- a/content/posts/2020-02-23-meetup-mf2-030.md
+++ b/content/posts/2020-02-23-meetup-mf2-030.md
@@ -1,5 +1,5 @@
 ---
-title: "`meetup-mf2.jvt.me` release 0.3.0: Integration issue fixes + caching"
+title: "`meetup-mf2.herokuapp.com` release 0.3.0: Integration issue fixes + caching"
 description: "Announcing the 0.3.0 version of meetup-mf2."
 tags:
 - microformats
