--- a/content/week-notes/2021/07.md
+++ b/content/week-notes/2021/07.md
@@ -8,7 +8,7 @@ draft: true
 - Couldn't use Twitter for a bit on Wednesday, as the app kept crashing after muting someone who was being promoted from a topic
 - Another week of being able to remember dreams - boring ones like Lombok and code review, to a bit darker
 - Went to Lidl (twice in the same morning) to get bits for the week, which has meant this week has been drowning in Morph's meowing begging for chicken
-- [Got some Doughnotts to start the three day weekend](/mf2/2021/02/wnt5s/)
+- [Got some Doughnotts to start the three day weekend](/mf2/2021/02/wnt5s/), which we both had off and gave us a bit of breathing room while we worked through some of our TODO lists!
 - Had a pretty positive Thursday morning - possibly a mix of a chat with Shama / getting my dailies in before work
 - Morph has managed to hurt my nose with his aggressive kitty kisses, although it seems to be a bit better since Thursday
 - Getting hounded by my team on Friday for logging on while I was on holiday (albeit to check calendar to book windows folks coming round) was nice, and pretty proud of myself to have not checked anything
@@ -21,6 +21,9 @@ draft: true
 - Got the first Easter egg + Lindt bunny of the season
 - Three nights of bad sleeping habits, but I've been having lie-ins to slightly counter it
 - Spent all of my crafting materials in _Apex Legends_ while they went a bit further for the anniversary, so I've now got some cooler cosmetics
+- Worked on a few www-api things:
+  - Changed my consent screen to allow choosing scope(s) based on what's supported, which I've been meaning to do for a while
+  - Worked on a few fixes, and added support for reads syndication to Twitter
 
 Watched:
 
