MP: Update article week-notes/2021/07

--- a/content/week-notes/2021/07.md
+++ b/content/week-notes/2021/07.md
@@ -33,3 +33,4 @@ Watched:
 - _Rick and Morty_
 - _The Crown_, in the background while playing Mario
 - _Bridesmaids_ with the gang
+- Rewatched the season 5 finale of _The Expanse_
