MP: Update article week-notes/2021/07

--- a/content/week-notes/2021/07.md
+++ b/content/week-notes/2021/07.md
@@ -24,6 +24,7 @@ date: "2021-02-21T21:58:28.056Z"
   - Changed my consent screen to allow choosing scope(s) based on what's supported, which I've been meaning to do for a while
   - Worked on a few fixes, and added support for reads syndication to Twitter
 - Broke another wine glass
+- Finished the non-bonus levels of Mario
 
 Watched:
 
