--- a/content/week-notes/2021/08.md
+++ b/content/week-notes/2021/08.md
@@ -2,6 +2,7 @@
 title: "Week Notes 21#08"
 description: "What happened in the week of 2021-02-22?"
 date: "2021-02-22T20:08:22Z"
+draft: true
 ---
 - Started the week off poorly with a bad night's sleep
 - Had some good progress with fixing Chef pipelines and solving the ever elusive Gemfile-with-ChefDK/Workstation
