MP: Update notes 2021/02/7fm54

--- a/content/mf2/2021/02/7fm54.md
+++ b/content/mf2/2021/02/7fm54.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/JamieTanna/status/1364342745540792331" ],
     "published" : [ "2021-02-23T22:31:48.357Z" ],
     "category" : [ "jenkins", "job-dsl" ],
     "content" : [ {
