MP: Update article week-notes/2021/08

--- a/content/week-notes/2021/08.md
+++ b/content/week-notes/2021/08.md
@@ -7,3 +7,5 @@ draft: true
 - Started the week off poorly with a bad night's sleep
 - Had some good progress with fixing Chef pipelines and solving the ever elusive Gemfile-with-ChefDK/Workstation
 - Morph left us a chonky spider carcus on the island
+- Milk and more are yet again showing they can't cancel / update properly
+- Thursday super stressful - Hackathon, Chef, incident
