MP: Update article week-notes/2021/08

--- a/content/week-notes/2021/08.md
+++ b/content/week-notes/2021/08.md
@@ -9,3 +9,6 @@ draft: true
 - Morph left us a chonky spider carcus on the island
 - Milk and more are yet again showing they can't cancel / update properly
 - Thursday super stressful - Hackathon, Chef, incident
+
+
+- job dsl
