--- a/content/week-notes/2021/08.md
+++ b/content/week-notes/2021/08.md
@@ -5,12 +5,15 @@ date: "2021-02-22T20:08:22Z"
 draft: true
 ---
 - Started the week off poorly with a bad night's sleep
-- Had some good progress with fixing Chef pipelines and solving the ever elusive Gemfile-with-ChefDK/Workstation
-- Morph left us a chonky spider carcus on the island
-- Milk and more are yet again showing they can't cancel / update properly
-- Thursday super stressful - Hackathon, Chef, incident
+- Had some good progress with fixing Chef pipelines and solving the ever elusive Gemfile-with-ChefDK/Workstation. although `knife-cookbook-doc` still isn't happy
+- Morph left us a chonky spider carcus on the island, and has jumped up a couple of times, which is really not OK
+- Milk and more are yet again showing they can't cancel / update properly, with double yoghurt coming this week despite being cancelled
+- Had an unfortunately stressful Thursday, leading me to multitask through the Hackathon, and then dropping out and leaving my team to work without me, while incident / Chef stuff got in the way
+- Did some unexpected cross-team coaching, but found it a really good experience
+- Accidentally published these early! Noticed earlier in the week that I'd forgotten to publish them using `draft` scope, so I need to amend my `WeekNotesDecorator` to always post them as a draft
+- Spent a bit of the week playing more with micropub.rocks, and have almost got my first PR sorted for it
+- Been thinking about indieauth.rocks, and whether we want it to be like an OB Conformance Suite, or like we've currently got with micropub.rocks
+- Posted my Job DSL article, which has had less traffic than hoped
+- Broke a bowl
 
-
-- job dsl
-- broke bowl
 - spring thurs
