MP: Update article week-notes/2021/08

--- a/content/week-notes/2021/08.md
+++ b/content/week-notes/2021/08.md
@@ -15,5 +15,7 @@ draft: true
 - Been thinking about indieauth.rocks, and whether we want it to be like an OB Conformance Suite, or like we've currently got with micropub.rocks
 - Posted my Job DSL article, which has had less traffic than hoped
 - Broke a bowl
+- Finally got around to reinstalling my desktop - after a couple of attempts - although I'm thinking the IOWAIT is definitely due to the temporary CPU I got
+  - Accidentally `rm *`'d in my home directory, fortunately after everything but dotfiles were backed up
 
 - spring thurs
