MP: Update article week-notes/2021/08

--- a/content/week-notes/2021/08.md
+++ b/content/week-notes/2021/08.md
@@ -18,4 +18,4 @@ draft: true
 - Finally got around to reinstalling my desktop - after a couple of attempts - although I'm thinking the IOWAIT is definitely due to the temporary CPU I got
   - Accidentally `rm *`'d in my home directory, fortunately after everything but dotfiles were backed up
 
-- spring thurs
+- felt like spring thurs
