Update this week's notes

--- a/content/week-notes/2021/08.md
+++ b/content/week-notes/2021/08.md
@@ -4,18 +4,35 @@ description: "What happened in the week of 2021-02-22?"
 date: "2021-02-22T20:08:22Z"
 draft: true
 ---
+- Accidentally published these early! Noticed earlier in the week that someone was on this page, which shouldn't have been available, and it turns out that I'd forgotten to publish them using `draft` scope, so I need to amend my `WeekNotesDecorator` to always post them as a draft
 - Started the week off poorly with a bad night's sleep
-- Had some good progress with fixing Chef pipelines and solving the ever elusive Gemfile-with-ChefDK/Workstation. although `knife-cookbook-doc` still isn't happy
+- Bit more in-sprint involvement, but also got really stuck into the Chef pipelines, and solved the ever elusive Gemfile-with-ChefDK/Workstation
+  - Had some good buy-in, and it's now in a good place to get some beta users on
+  - `knife-cookbook-doc` still isn't happy, but wondering if [upstream can help](https://github.com/realityforge/knife-cookbook-doc/issues/51)
 - Morph left us a chonky spider carcus on the island, and has jumped up a couple of times, which is really not OK
-- Milk and more are yet again showing they can't cancel / update properly, with double yoghurt coming this week despite being cancelled
+- Morph hasn't been spending much time with us when we've been on the sofa - instead being on his radiator bed
+- Milk and More are yet again showing they can't cancel / update properly, with double yoghurt coming this week despite being cancelled
 - Had an unfortunately stressful Thursday, leading me to multitask through the Hackathon, and then dropping out and leaving my team to work without me, while incident / Chef stuff got in the way
-- Did some unexpected cross-team coaching, but found it a really good experience
-- Accidentally published these early! Noticed earlier in the week that I'd forgotten to publish them using `draft` scope, so I need to amend my `WeekNotesDecorator` to always post them as a draft
+  - Found it incredibly annoying trying to send myself an encrypted email, so I didn't have to log into GitHub.com on my work machine, especially with differences between OpenSSL implementations, but there will be a blog post soon
+- Managed to get myself a few blog post ideas this week, which is positive, but didn't get around to writing them
+- Did some unexpected cross-team coaching, but found it a really good experience - hopefully for both parties!
 - Spent a bit of the week playing more with micropub.rocks, and have almost got my first PR sorted for it
 - Been thinking about indieauth.rocks, and whether we want it to be like an OB Conformance Suite, or like we've currently got with micropub.rocks
 - Posted my Job DSL article, which has had less traffic than hoped
 - Broke a bowl
 - Finally got around to reinstalling my desktop - after a couple of attempts - although I'm thinking the IOWAIT is definitely due to the temporary CPU I got
-  - Accidentally `rm *`'d in my home directory, fortunately after everything but dotfiles were backed up
+  - [Accidentally `rm *`'d in my home directory](/mf2/2021/02/qxlyl/), fortunately after everything but dotfiles were backed up
+- Got a Gousto signup! Wondering if I should update the post too
+- Had a lovely relay walk on Saturday
+- Had anice long chat with Cat over Friday lunch while making sandwiches
+- Had the best mango lassi in a while
+- This week's beautiful weather has only been ruined by lots of work being done on the street, so leaving windows open has a cost!
+- Ring Fit before a 9am Wednesday meeting didn't really go well, especially when putting it to sleep, realising it wasn't closed, then the stupid game wanting me to get all the accessories set up, even though I literally just wanted to quit the game
+- Had two big job application updates from folks
 
-- felt like spring thurs
+Watched:
+
+- _WandaVision_ - "What is grief, if not love persevering?"
+- _Superstore_
+
+- Planned to, but didn't get around to _Guns Akimbo_
