Update this week's notes

--- a/content/week-notes/2021/08.md
+++ b/content/week-notes/2021/08.md
@@ -9,7 +9,8 @@ draft: true
 - Bit more in-sprint involvement, but also got really stuck into the Chef pipelines, and solved the ever elusive Gemfile-with-ChefDK/Workstation
   - Had some good buy-in, and it's now in a good place to get some beta users on
   - `knife-cookbook-doc` still isn't happy, but wondering if [upstream can help](https://github.com/realityforge/knife-cookbook-doc/issues/51)
-- Morph left us a chonky spider carcus on the island, and has jumped up a couple of times, which is really not OK
+  - Made some good Job DSL decisions, and have built the pipelines on learnings from other solutions in the past
+- Morph left us a chonky spider carcus on the island, and has jumped up a couple of times, which is really not OK, but confirms our suspicions
 - Morph hasn't been spending much time with us when we've been on the sofa - instead being on his radiator bed
 - Milk and More are yet again showing they can't cancel / update properly, with double yoghurt coming this week despite being cancelled
 - Had an unfortunately stressful Thursday, leading me to multitask through the Hackathon, and then dropping out and leaving my team to work without me, while incident / Chef stuff got in the way
@@ -22,13 +23,16 @@ draft: true
 - Broke a bowl
 - Finally got around to reinstalling my desktop - after a couple of attempts - although I'm thinking the IOWAIT is definitely due to the temporary CPU I got
   - [Accidentally `rm *`'d in my home directory](/mf2/2021/02/qxlyl/), fortunately after everything but dotfiles were backed up
+  - Only 2 and a half years after [I said I would leave BTRFS]({{< ref 2018-12-22-leaving-btrfs >}})
+  - After several months of no updates, as I was constantly running out of space, so at least the space issue is resolved
 - Got a Gousto signup! Wondering if I should update the post too
 - Had a lovely relay walk on Saturday
-- Had anice long chat with Cat over Friday lunch while making sandwiches
+- Had a nice long chat with Cat over Friday lunch while making sandwiches
 - Had the best mango lassi in a while
 - This week's beautiful weather has only been ruined by lots of work being done on the street, so leaving windows open has a cost!
 - Ring Fit before a 9am Wednesday meeting didn't really go well, especially when putting it to sleep, realising it wasn't closed, then the stupid game wanting me to get all the accessories set up, even though I literally just wanted to quit the game
 - Had two big job application updates from folks
+- Whitesource was finally resolved!
 
 Watched:
 
