Update this week's notes

--- a/content/week-notes/2021/08.md
+++ b/content/week-notes/2021/08.md
@@ -29,6 +29,7 @@ date: "2021-02-28T21:28:30.397Z"
 - Had a nice long chat with Cat over Friday lunch while making sandwiches
 - Had the best mango lassi in a while
 - This week's beautiful weather has only been ruined by lots of work being done on the street, so leaving windows open has a cost!
+  - Morph has definitely been more stressed this week, and pretty sure that's been why
 - Ring Fit before a 9am Wednesday meeting didn't really go well, especially when putting it to sleep, realising it wasn't closed, then the stupid game wanting me to get all the accessories set up, even though I literally just wanted to quit the game
 - Had two big job application updates from folks
 - Whitesource was finally resolved!
