Update this week's notes

--- a/content/week-notes/2021/08.md
+++ b/content/week-notes/2021/08.md
@@ -33,6 +33,7 @@ date: "2021-02-28T21:28:30.397Z"
 - Ring Fit before a 9am Wednesday meeting didn't really go well, especially when putting it to sleep, realising it wasn't closed, then the stupid game wanting me to get all the accessories set up, even though I literally just wanted to quit the game
 - Had two big job application updates from folks
 - Whitesource was finally resolved!
+- Tweets haven't been sending, so need to look into that a bit more, wondering if post-deploy / Telegraph / Bridgy need a bit more of a nudge
 
 Watched:
 
