MP: Update article week-notes/2021/08

--- a/content/week-notes/2021/08.md
+++ b/content/week-notes/2021/08.md
@@ -24,6 +24,7 @@ date: "2021-02-28T21:28:30.397Z"
   - [Accidentally `rm *`'d in my home directory](/mf2/2021/02/qxlyl/), fortunately after everything but dotfiles were backed up
   - Only 2 and a half years after [I said I would leave BTRFS]({{< ref 2018-12-22-leaving-btrfs >}})
   - After several months of no updates, as I was constantly running out of space, so at least the space issue is resolved
+  - Saw this as a prerequisite for my Tech Nottingham talk recording, as I didn't want it to be slow while doing it
 - Got a Gousto signup! Wondering if I should update the post too
 - Had a lovely relay walk on Saturday
 - Had a nice long chat with Cat over Friday lunch while making sandwiches
