--- a/content/mf2/2021/03/40x6i.md
+++ b/content/mf2/2021/03/40x6i.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/expansegifs/status/1366466909017882627" ],
     "name" : [ "Like of @expansegifs's tweet" ],
     "published" : [ "2021-03-01T20:17:00+0000" ],
     "category" : [ "the-expanse" ],
