--- a/content/mf2/2021/03/87r3e.md
+++ b/content/mf2/2021/03/87r3e.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/TheAndrewNadeau/status/1366509667556409347" ],
     "name" : [ "Like of @TheAndrewNadeau's tweet" ],
     "published" : [ "2021-03-02T09:37:00+0000" ],
     "category" : [ "shitpost" ],
