--- a/content/mf2/2021/03/t0d55.md
+++ b/content/mf2/2021/03/t0d55.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/rhiaro/status/1367068739859079168" ],
     "name" : [ "Like of @rhiaro's tweet" ],
     "published" : [ "2021-03-03T12:05:00+0000" ],
     "category" : [ "remote-work" ],
