--- a/content/week-notes/2021/09.md
+++ b/content/week-notes/2021/09.md
@@ -4,4 +4,12 @@ description: "What happened in the week of 2021-03-01?"
 date: "2021-03-06T23:22:07Z"
 draft: true
 ---
-<div><br>- Had a productive 10% day working on fluentd configuration, and fighting regexes, but made some really awesome progress on simplifying logging for QTN<br><br>Watched:<br><br>- _Guns Akimbo_<br>- _What's Your Number?_<br>- _ What Happens in Vegas_<br>- _Superstore_ (which had been a really sad start to the last season!)<br>- _Sex Education_</div>
+- Had a productive 10% day working on fluentd configuration, and fighting regexes, but made some really awesome progress on simplifying logging for QTN
+
+Watched:
+
+- _Guns Akimbo_
+- _What's Your Number?_
+- _ What Happens in Vegas_
+- _Superstore_ (which had been a really sad start to the last season!)
+- _Sex Education_
