MP: Update article week-notes/2021/09

--- a/content/week-notes/2021/09.md
+++ b/content/week-notes/2021/09.md
@@ -4,7 +4,12 @@ description: "What happened in the week of 2021-03-01?"
 date: "2021-03-06T23:22:07Z"
 draft: true
 ---
+- My first Zoom funeral
+- Got the windows people round to measure
 - Had a productive 10% day working on fluentd configuration, and fighting regexes, but made some really awesome progress on simplifying logging for QTN
+- Had some good time recharging on Saturday
+- Found that apparently there are some people who think that men are in the minority, and are expected to be invited to minority events
+- A quiet Homebrew
 
 Watched:
 
