--- a/content/week-notes/2021/09.md
+++ b/content/week-notes/2021/09.md
@@ -10,6 +10,9 @@ draft: true
 - Had some good time recharging on Saturday
 - Found that apparently there are some people who think that men are in the minority, and are expected to be invited to minority events
 - A quiet Homebrew
+- Added support for Micropub CRUD on my articles
+- Got my micropub.rocks setup working, and my first PR ready for reviews
+- Telegraph delays led to ~1 week of mentions being sent a bit late, so syndicated tweets came late, but :shrug:
 
 Watched:
 
