--- a/content/week-notes/2021/09.md
+++ b/content/week-notes/2021/09.md
@@ -13,6 +13,7 @@ draft: true
 - Added support for Micropub CRUD on my articles
 - Got my micropub.rocks setup working, and my first PR ready for reviews
 - Telegraph delays led to ~1 week of mentions being sent a bit late, so syndicated tweets came late, but :shrug:
+- Asda delivery, obviously, came early for an 0800 delivery
 
 Watched:
 
