MP: Update article week-notes/2021/09

--- a/content/week-notes/2021/09.md
+++ b/content/week-notes/2021/09.md
@@ -22,3 +22,5 @@ Watched:
 - _ What Happens in Vegas_
 - _Superstore_ (which had been a really sad start to the last season!)
 - _Sex Education_
+- _Bad Moms_
+- _WandaVision_
