MP: Update article week-notes/2021/09

--- a/content/week-notes/2021/09.md
+++ b/content/week-notes/2021/09.md
@@ -8,20 +8,24 @@ draft: true
 - Got the windows people round to measure
 - Had a productive 10% day working on fluentd configuration, and fighting regexes, but made some really awesome progress on simplifying logging for QTN
 - Had some good time recharging on Saturday
-- Found that apparently there are some people who think that men are in the minority, and are expected to be invited to minority events
+- Found that apparently there are some people who think that men are in the minority, and are expected to be invited to minority events, which gave us an infuriating chuckle
 - A quiet Homebrew
 - Added support for Micropub CRUD on my articles
 - Got my micropub.rocks setup working, and my first PR ready for reviews
 - Telegraph delays led to ~1 week of mentions being sent a bit late, so syndicated tweets came late, but :shrug:
-- Asda delivery, obviously, came early for an 0800 delivery
+- Asda delivery, obviously, came earlier than the 0800 delivery slot
 - Temporarily lost the recycling bin
+- Morph had a very stressful Friday/Saturday, with a tonne of cats trying to get into the house
+- Had a nice catch up with Neeshu
 
 Watched:
 
 - _Guns Akimbo_
 - _What's Your Number?_
 - _ What Happens in Vegas_
-- _Superstore_ (which had been a really sad start to the last season!)
+- _Superstore_ (which had been a really sad start to the last season, and hasn't been as good unfortunately)
 - _Sex Education_
 - _Bad Moms_
-- _WandaVision_
+- _John Tucker Must Die_
+- _What to Expect When You're Expecting_ in solidarity for our wonderful friends who've had exciting news this week
+- _WandaVision_ finished this week with a very good episode
