MP: Update article week-notes/2021/09

--- a/content/week-notes/2021/09.md
+++ b/content/week-notes/2021/09.md
@@ -17,6 +17,7 @@ draft: true
 - Temporarily lost the recycling bin
 - Morph had a very stressful Friday/Saturday, with a tonne of cats trying to get into the house
 - Had a nice catch up with Neeshu
+- Bought a new CPU, which is the first step to doing my TN talk, so you could say I'm super prepared :sweat_smile:
 
 Watched:
 
