Update article week-notes/2021/09

--- a/content/week-notes/2021/09.md
+++ b/content/week-notes/2021/09.md
@@ -4,29 +4,33 @@ description: "What happened in the week of 2021-03-01?"
 date: "2021-03-06T23:22:07Z"
 draft: true
 ---
-- My first Zoom funeral
-- Got the windows people round to measure
-- Had a productive 10% day working on fluentd configuration, and fighting regexes, but made some really awesome progress on simplifying logging for QTN
+- My first Zoom funeral, which was sad, a bit weird not singing hymns, and having connection issues didn't help
+- Got the windows people round to measure, but didn't get a chance to go check out the samples
+- Had a productive 10% day working on fluentd configuration, and fighting regexes, but made some really awesome progress on providing structured logging, which will be hugely helpful for supportability
 - Had some good time recharging on Saturday
-- Found that apparently there are some people who think that men are in the minority, and are expected to be invited to minority events, which gave us an infuriating chuckle
+- Found that apparently there are some people who think that "men are a gender minority", and are expected to be invited to minority events, which gave us an infuriating chuckle
 - A quiet Homebrew
-- Added support for Micropub CRUD on my articles
+- Added support for Micropub CRUD on my articles, which will be useful, even if it is just for updating syndication links
 - Got my micropub.rocks setup working, and my first PR ready for reviews
-- Telegraph delays led to ~1 week of mentions being sent a bit late, so syndicated tweets came late, but :shrug:
+- Telegraph delays led to ~1 week of mentions being sent a bit late, so syndicated tweets came late, but 🤷
 - Asda delivery, obviously, came earlier than the 0800 delivery slot
 - Temporarily lost the recycling bin
-- Morph had a very stressful Friday/Saturday, with a tonne of cats trying to get into the house
 - Had a nice catch up with Neeshu
-- Bought a new CPU, which is the first step to doing my TN talk, so you could say I'm super prepared :sweat_smile:
+- Bought a new CPU, which is the first step to doing my TN talk, so you could say I'm super prepared 😅
+- Morph had a very stressful Friday/Saturday, with a tonne of cats trying to get into the house, but he then spent most of Saturday asleep with us so that was really nice, and we had a good recharging weekend
+  - Morph just trotting over last night, and settling himself in the nook between the arm of the sofa and Anna was 😻
+- Chef pipelines are imminently ready, just been waiting on container tweaks, and it's given me a chance to chat to some folks about fixing some previously broken ChefSpec tests which is good
+- Tech Con this week at work which had a good mix of talks - but has also given me a lot of talks to watch after the fact, as I had quite a few clashes
 
 Watched:
 
 - _Guns Akimbo_
 - _What's Your Number?_
-- _ What Happens in Vegas_
+- _What Happens in Vegas_
 - _Superstore_ (which had been a really sad start to the last season, and hasn't been as good unfortunately)
 - _Sex Education_
 - _Bad Moms_
 - _John Tucker Must Die_
 - _What to Expect When You're Expecting_ in solidarity for our wonderful friends who've had exciting news this week
 - _WandaVision_ finished this week with a very good episode
+- _The Proposal_
