--- a/content/mf2/2021/03/17gm7.md
+++ b/content/mf2/2021/03/17gm7.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/SparkleClass/status/1370425198869110784" ],
     "name" : [ "Like of @SparkleClass's tweet" ],
     "published" : [ "2021-03-12T17:53:00+0000" ],
     "category" : [ "cute" ],
