--- a/content/mf2/2021/03/6f45a.md
+++ b/content/mf2/2021/03/6f45a.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/Papapishu/status/1370200113977700354" ],
     "name" : [ "Like of @Papapishu's tweet" ],
     "published" : [ "2021-03-12T22:45:00+0000" ],
     "like-of" : [ "https://twitter.com/Papapishu/status/1370200113977700354" ],
