MP: Update article week-notes/2021/09

--- a/content/week-notes/2021/09.md
+++ b/content/week-notes/2021/09.md
@@ -2,6 +2,7 @@
 title: "Week Notes 21#09"
 description: "What happened in the week of 2021-03-01?"
 date: "2021-03-07T22:42:35.804Z"
+draft: true
 ---
 - My first Zoom funeral, which was sad, a bit weird not singing hymns, and having connection issues didn't help
 - Got the windows people round to measure, but didn't get a chance to go check out the samples
@@ -21,6 +22,7 @@ date: "2021-03-07T22:42:35.804Z"
 - Chef pipelines are imminently ready, just been waiting on container tweaks, and it's given me a chance to chat to some folks about fixing some previously broken ChefSpec tests which is good
 - Tech Con this week at work which had a good mix of talks - but has also given me a lot of talks to watch after the fact, as I had quite a few clashes
   - Enjoyed the very 🌶 Q&As on appreciation, engagement and performance management
+- Started on the Death Star jigsaw
 
 Watched:
 
