MP: Update article week-notes/2021/10

--- a/content/week-notes/2021/10.md
+++ b/content/week-notes/2021/10.md
@@ -7,7 +7,12 @@ draft: true
 The anniversary of Anna and I being in lockdown.
 
 - My provisional driving license has expired
-
+- Chef pipelines are now being adopted!
+  - Had M8B consuming it, which is awesome, and we're going to get some comms out for other teams
+  - Got some good progress with planning out the next steps, and having agreement with my time for this year, so looking forward to getting things much better by the end of the year!
+  - Also some late nights multitasking with Apex to fix some issues with the old/new pipelines
+- Been investing a bit more in Morph having a safe space, with the recommendations from ?'s book
+- Start of a week off over my birthday
 
 Watched:
 
