Update last week's notes

--- a/content/week-notes/2021/09.md
+++ b/content/week-notes/2021/09.md
@@ -22,6 +22,7 @@ date: "2021-03-07T22:42:35.804Z"
 - Tech Con this week at work which had a good mix of talks - but has also given me a lot of talks to watch after the fact, as I had quite a few clashes
   - Enjoyed the very 🌶 Q&As on appreciation, engagement and performance management
 - Started on the Death Star jigsaw
+- Lost a glass
 
 Watched:
 
