Update this week's notes

--- a/content/week-notes/2021/10.md
+++ b/content/week-notes/2021/10.md
@@ -4,18 +4,34 @@ description: "What happened in the week of 2021-03-08?"
 date: "2021-03-13T12:00:15Z"
 draft: true
 ---
-The anniversary of Anna and I being in lockdown.
+The anniversary of Anna and I being in lockdown - I'd hopped to get a blog post written up for it, but didn't get around to it. A very busy week ahead of the week off.
 
+- Bought a load of treats from Lidl just for me, been a good week, although not the healthiest
+- Had some interesting dreams this week
+  - Had a dream about The Expanse, and some reason I was adamant that it was S06E01/S06E02 - I wonder if it's the opening scenes of the book? Bull was there, and I was doing some slow-mo throwing of weapons, as if it were Superhot VR
+  - Started Tuesday pretty nicely with a dream about being on a beach on holiday
+  - Think there was a dream about fighting ducks?
+- Got my new CPU delivered, which has made a good difference!
+  - Bit of a panic installing it, thinking I'd fucked it up and bent the pins, but so far so good - I was worried the fans were going so hot but turns out it was just cause I'd not properly installed the heatsink
+  - While I was there, thought I'd finally get my case properly closed so I don't have the awkward shuffle while trying to put my desk down
 - My provisional driving license has expired
 - Chef pipelines are now being adopted!
   - Had M8B consuming it, which is awesome, and we're going to get some comms out for other teams
   - Got some good progress with planning out the next steps, and having agreement with my time for this year, so looking forward to getting things much better by the end of the year!
   - Also some late nights multitasking with Apex to fix some issues with the old/new pipelines
-- Been investing a bit more in Morph having a safe space, with the recommendations from ?'s book
-- Start of a week off over my birthday
+- Been investing a bit more in Morph having a safe space, with the recommendations from **??**'s book, so bought a fair few new things for him, and have been trying to do what we can to be especially careful of his space, with mixed success
+- Start of a week off over my birthday - this weekend, I've definitely felt that I'm needing this holiday!
+- Bought a bike machine
+- Had some tough Ring Fit days - a lower body set on Wednesday was a bit of a tough day
+- Making some good progress on the Death Star jigsaw, almost finished the corners
+- Partially started on my TN talk prep - at least, as far as having the new CPU and testing out OBS
+- Got a few blogumentation posts out
+- Had socially distanced chats with Carol and Thom, and Andrew
 
 Watched:
 
 - _Suits_
 - _Superstore_
 - _Sex Education_
+- _Paradise PD_
+- _Friday Night Dinner_
