MP: Update article week-notes/2021/10

--- a/content/week-notes/2021/10.md
+++ b/content/week-notes/2021/10.md
@@ -19,6 +19,7 @@ The anniversary of Anna and I being in lockdown - I'd hoped to get a blog post w
   - Got some good progress with planning out the next steps, and having agreement with my time for this year, so looking forward to getting things much better by the end of the year!
   - Also some late nights multitasking with Apex to fix some issues with the old/new pipelines
 - Been investing a bit more in Morph having a safe space, with the recommendations from _Cat Detective_ (although I'm super behind with reading it) so bought a fair few new things for him, and have been trying to do what we can to be especially careful of his space, with mixed success
+  - he's enjoyed being a ninja again now he's not got his bell on his collar and seems much more comfortable going out
 - Start of a week off over my birthday - this weekend, I've definitely felt that I'm needing this holiday!
 - Bought a bike machine
 - Had some mixed effort Ring Fit days - a couple of small days and a heavy lower body set on Wednesday took it out of me!
