--- a/content/mf2/2021/03/w6s62.md
+++ b/content/mf2/2021/03/w6s62.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/Ayodelefx/status/1371855909442482176" ],
     "name" : [ "Like of @Ayodelefx's tweet" ],
     "published" : [ "2021-03-17T21:56:00+0000" ],
     "like-of" : [ "https://twitter.com/Ayodelefx/status/1371855909442482176" ],
