--- a/content/mf2/2021/03/g025c.md
+++ b/content/mf2/2021/03/g025c.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/CatsInsideBox/status/1366520243284279298" ],
     "name" : [ "Like of @CatsInsideBox's tweet" ],
     "published" : [ "2021-03-21T14:01:00+0000" ],
     "category" : [ "cute" ],
