Update article week-notes/2021/11

--- a/content/week-notes/2021/11.md
+++ b/content/week-notes/2021/11.md
@@ -4,23 +4,26 @@ description: "What happened in the week of 2021-03-15?"
 date: "2021-03-16T11:30:26Z"
 draft: true
 ---
-A week off for my birthday week, which was fairly blue, and not nearly as productive as it should've been **??**.
+A week off for my birthday:
 
-- <span style="display: hidden">Had a pretty awful dream about someone's head being used as a chopping board</span>
-- Jigsaw progress has been pretty limited **??**, and **??**. Morph's also been enjoying swiping portions of the jigsaw away **??**
-- Carol and Thom moved in, and we gave them a hand with a few bits, and got a nice chance to look around the new digs!
-  - While at the old house, had a nice little hello from a grey cat
-- Got a new Fire Stick (so we have one for the exercise bike) and the new one is so much quicker to connect to the app as well as having the remote
-- Although I'd managed to get my mind off work by last Sunday, it then came back pretty hard towards the end of the week, and today **??**
-- On Saturday I found that the loud fans in my office hasn't been the NAS, it was my Mac
+- Jigsaw progress has been pretty limited this week, after getting the outside done, and have been considering putting it away, as it's in the way and quite difficult. Morph's also been enjoying swiping portions of it off the table, making it even harder to finish
+- Gave Carol and Thom a hand with the wardrobe from our old house, and got a nice chance to look around the new digs!
+  - While at the old house, had a nice little hello from a cute little grey cat
+- Got a new Fire Stick (so we have one for the exercise bike) and the new one is so much quicker to connect to the app, and having the remote again is a life changer!
+- Although I'd managed to get my mind off work by last Sunday, it then came back pretty hard towards the end of the week<span style="display: none">, and today I've ended up checking messages, so there's less to do tomorrow, and cause my mind needed a little bit</span>
+- On Saturday I found that the loud fans in my office hasn't been the NAS, it was my Mac, which has been on for some reason
 - I've decided I prefer milk chocolate Lindt to dark chocolate
-- Got burned by the Papa John menu design on Deliveroo, and accidentally got small pizzas - not the best use of the money :emb:
+- Got burned by the Papa John menu design on Deliveroo, and accidentally got small pizzas - not the best use of the money 😳
 - May have caramelised one of our Gousto sauces this week by accident
-- Ring Fit - stamina set
-- Played a fair bit of Apex Legends as an alternative to deciding what to do
+- Morph has been enjoying coming over and either spending tonnes of time with us, or barely being with us until we need to get up
+- Did my Monday Ring Fit today, so I can get to work earlier / get to the shops, and given I had such a tough time with the "stamina set", I'm gonna try doing that more often
+- Played a fair bit of Apex Legends as an alternative to deciding what to do <span style="display: none"> - wondering if I've found it difficult this week because I've been choosing between what I want to do, and what I should do, so has led to not really doing much</span>
 - Got my OBS setup sorted for my TN talk, but not done too much apart from that
-- Had some lovely presents **??**
-- Lego
+- Had a nice birthday - got some lovely presents, yummy bits from Lidl, enjoyed a day of doing nice things, eating good food (McDonalds breakfast and Five Guys)
+  - Quite similar to other days, but it shows that most days are good days!
+- Got some cool Lego for my birthday - so far I've built the London Architecture, and have my TIE fighter to go
+- Been taking advantage of being off by not getting enough sleep, and spending a bit too much time on the sofa, but feeling better for the time off, even if the TODO list hasn't gone down as far as I'd hoped <span style="display: hidden">and it's been quite blue</span>
+- Had a pretty awful dream <span class="spoiler">about someone's head being used as a chopping board</span>
 
 Watched:
 
