Update article week-notes/2021/11

--- a/content/week-notes/2021/11.md
+++ b/content/week-notes/2021/11.md
@@ -4,6 +4,30 @@ description: "What happened in the week of 2021-03-15?"
 date: "2021-03-16T11:30:26Z"
 draft: true
 ---
-Week off!
+A week off for my birthday week, which was fairly blue, and not nearly as productive as it should've been **??**.
 
-Pizza
+- <span style="display: hidden">Had a pretty awful dream about someone's head being used as a chopping board</span>
+- Jigsaw progress has been pretty limited **??**, and **??**. Morph's also been enjoying swiping portions of the jigsaw away **??**
+- Carol and Thom moved in, and we gave them a hand with a few bits, and got a nice chance to look around the new digs!
+  - While at the old house, had a nice little hello from a grey cat
+- Got a new Fire Stick (so we have one for the exercise bike) and the new one is so much quicker to connect to the app as well as having the remote
+- Although I'd managed to get my mind off work by last Sunday, it then came back pretty hard towards the end of the week, and today **??**
+- On Saturday I found that the loud fans in my office hasn't been the NAS, it was my Mac
+- I've decided I prefer milk chocolate Lindt to dark chocolate
+- Got burned by the Papa John menu design on Deliveroo, and accidentally got small pizzas - not the best use of the money :emb:
+- May have caramelised one of our Gousto sauces this week by accident
+- Ring Fit - stamina set
+- Played a fair bit of Apex Legends as an alternative to deciding what to do
+- Got my OBS setup sorted for my TN talk, but not done too much apart from that
+- Had some lovely presents **??**
+- Lego
+
+Watched:
+
+- (A lot of) _Suits_
+- _Friday Night Dinner_
+- _The Falcon and the Winter Soldier_
+- _Bring It On_
+- _Assembled: The Making of WandaVision_
+- _Pitch Perfect_
+- Got about an hour into _Once Upon a Time in Hollywood_ but gave up as it was painful to watch - not a good choice for my birthday!
