--- a/content/mf2/2021/03/03s5j.md
+++ b/content/mf2/2021/03/03s5j.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/Dixie3Flatline/status/1374038631560585216" ],
     "name" : [ "Like of @Dixie3Flatline's tweet" ],
     "published" : [ "2021-03-22T17:04:00+0000" ],
     "category" : [ "diversity-and-inclusion" ],
